--- a/.github/workflows/testemakefile.yml
+++ b/.github/workflows/testemakefile.yml
@@ -1,3 +1,21 @@
+# This is your build stage
+  - name: npm install, build, and test
+    run: |
+      npm install
+      npm run build --if-present
+      npm run test --if-present
+
+  - name: Zip artifact for deployment
+    run: zip release.zip ./* -r
+
+  - name: Upload artifact for deployment job
+    uses: actions/upload-artifact@v2
+    with:
+      name: node-app
+      path: release.zip
+  
+# This is your deploy stage
+
 name: Makefile CI
 
 on:
