--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,3 +1,56 @@
+  # This is your build stage
+
+  - name: npm install, build, and test
+
+    run: |
+
+      npm install
+
+      npm run build --if-present
+
+      npm run test --if-present
+
+  - name: Zip artifact for deployment
+
+    run: zip release.zip ./* -r
+
+  - name: Upload artifact for deployment job
+
+    uses: actions/upload-artifact@v2
+
+    with:
+
+      name: node-app
+
+      path: release.zip
+
+  
+
+  # This is your deploy stage
+
+  steps:
+
+  - name: Download artifact from build job
+
+    uses: actions/download-artifact@v2
+
+    with:
+
+      name: node-app
+
+      
+
+  **- name: unzip artifact for deployment
+
+    run: unzip release.zip**
+
+  - name: 'Deploy to Azure Web App'
+
+    id: deploy-to-webapp
+
+    uses: azure/webapps-deploy@v2
+
+    with:
 name: C/C++ CI
 
 on:
@@ -9,7 +62,7 @@ on:
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
