--- a/.github/workflows/testemakefile.yml
+++ b/.github/workflows/testemakefile.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+      run: autoreconf -i`
     - name: configure
       run: ./configure
       
