--- a/.github/workflows/testemakefile.yml
+++ b/.github/workflows/testemakefile.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       
-    - name: autoreconf
-      run: autoreconf -i
+ #  - name: autoreconf
+  #   run: autoreconf -i
       
     - name: autoconf
       run: autoconf
