--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,12 +9,15 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+    - name: autoreconf
+      run: autoreconf -i
+    - name: autoconf
+      run: autoconf
     - name: configure
-      run: autoreconf -i`
       run: ./configure
     - name: make
       run: make
