--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,9 +9,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
+    - name: Setup MSYS2
+    - uses: msys2/setup-msys2@v2
+  
     - uses: actions/checkout@v3
     - name: autoreconf
     - name: autoconf
