--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,18 +12,27 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - uses: actions/checkout@v3
     - name: Setup MSYS2
     - uses: msys2/setup-msys2@v2
-  
-    - uses: actions/checkout@v3
     - name: autoreconf
-    - name: autoconf
-      run: autoconf
+      run: autoreconf
     - name: configure
+
       run: ./configure
+
     - name: make
+
       run: make
+
     - name: make check
+
       run: make check
+
     - name: make distcheck
+
       run: make distcheck
+    
+    
+    
+    
