--- a/.github/workflows/testemakefile.yml
+++ b/.github/workflows/testemakefile.yml
@@ -9,25 +9,23 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: msys2/setup-msys2@v2
+    
+      install: >-
+git; autoconf; libtoll; base-devel
+
+         - uses: actions/checkout@v3
+         - name: configure
+           run: ./configure
       
- #  - name: autoreconf
-  #   run: autoreconf -i
+        - name: Install dependencies
+           run: make
       
-    - name: autoconf
-      run: autoconf
+        - name: Run check
+           run: make check
       
-    - name: configure
-      run: ./configure
-      
-    - name: Install dependencies
-      run: make
-      
-    - name: Run check
-      run: make check
-      
-    - name: Run distcheck
-      run: make distcheck
+        - name: Run distcheck
+         run: make distcheck
